--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Qibla Compass",
   "short_name": "Qibla",
-  "description": "Ваш компас к Кибле и время намаза",
+  "description": "Кибла и время намаза",
   "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#eef6f8",
@@ -33,7 +33,7 @@
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
